--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,28 +1,28 @@
 {{extend 'layout.html'}}
 {{ i = 0 }}
-{{ for tweet in tweets: }}
+{{ for tweet_hash in tweets_hash: }}
     {{ if i % 2: }}        
         <div class="tweet">
             <div class="tweet-image">
-                <img src="{{=tweet['profile_image_url']}}" alt="" />
+                <img src="{{=tweet_hash['profile_image_url']}}" alt="" />
             </div>
             <div class="tweet-row">
-                <a href="{{='http://twitter.com/'+tweet['from_user']}}">
-                    <span class="tweet-user-name">{{=tweet['from_user']}}</span>
+                <a href="{{='http://twitter.com/'+tweet_hash['from_user']}}">
+                    <span class="tweet-user-name">{{=tweet_hash['from_user']}}</span>
                 </a>
-                <p class="tweet-text">{{=tweet['text']}}</p>   
+                <p class="tweet-text">{{=tweet_hash['text']}}</p>   
             </div>
         </div>
     {{ else: }}
         <div class="tweet-odd">
             <div class="tweet-image">
-                <img src="{{=tweet['profile_image_url']}}" alt="" />
+                <img src="{{=tweet_hash['profile_image_url']}}" alt="" />
             </div>
             <div class="tweet-row">
-                <a href="{{='http://twitter.com/'+tweet['from_user']}}">
-                    <span class="tweet-user-name">{{=tweet['from_user']}}</span>
+                <a href="{{='http://twitter.com/'+tweet_hash['from_user']}}">
+                    <span class="tweet-user-name">{{=tweet_hash['from_user']}}</span>
                 </a>
-                <p class="tweet-text">{{=tweet['text']}}</p>   
+                <p class="tweet-text">{{=tweet_hash['text']}}</p>   
             </div>
         </div>
     {{ pass }}
