Inserting URL repository

--- a/views/layout.html
+++ b/views/layout.html
@@ -72,7 +72,10 @@
             {{include}}
         </div>
         <div id="footer">
-            <address>Powered by <a href="http://gilsondev.com">Gilson #DEV</a></address>
+            <address>
+                Developed by <a href="http://gilsondev.com">Gilson #DEV</a> | 
+                <a href="https://github.com/contatogilsonsbf/web2hash">Fork in Github</a>
+            </address>
         </div>
     </div>
   </body>
