--- a/views/layout.html
+++ b/views/layout.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="{{=T.accepted_language or 'en'}}" class="no-js"><!-- no-js need it for modernzr -->
   <head>
-    
-    <meta charset="utf-8" />	  	
+
+    <meta charset="utf-8" />
     <!-- www.phpied.com/conditional-comments-block-downloads/ -->
-    <!--[if IE]><![endif]-->    
-    <!-- Always force latest IE rendering engine 
-	 (even in intranet) & Chrome Frame 
+    <!--[if IE]><![endif]-->
+    <!-- Always force latest IE rendering engine
+	 (even in intranet) & Chrome Frame
 	 Remove this if you use the .htaccess -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    
+
     <title>{{=response.title or request.application}}</title>
-    
+
     <!-- http://dev.w3.org/html5/markup/meta.name.html -->
-    <meta name="application-name" content="{{=request.application}}" />	
-    
-    <!-- Speaking of Google, don't forget to set your site up: 
+    <meta name="application-name" content="{{=request.application}}" />
+
+    <!-- Speaking of Google, don't forget to set your site up:
 	 http://google.com/webmasters -->
     <meta name="google-site-verification" content="" />
-    
+
     <!--  Mobile Viewport Fix
-	  j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag 
+	  j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag
 	  device-width: Occupy full width of the screen in its current orientation
 	  initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
 	  maximum-scale = 1.0 retains dimensions instead of zooming in if page width < device width
       -->
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-    
+
     <!-- Refresh page from 1 min -->
-    <meta http-equiv="refresh" content="60" /> 
-    
+    <meta http-equiv="refresh" content="60" />
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references -->
     <link rel="shortcut icon" href="{{=URL('static','favicon.ico')}}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{{=URL('static','favicon.png')}}">
 
     <!-- For the less-enabled mobile browsers like Opera Mini -->
     <link rel="stylesheet" media="handheld" href="{{=URL('static','css/handheld.css')}}">
-    
+
     <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
     <script src="{{=URL('static','js/modernizr-1.6.min.js')}}"></script>
-    
+
     {{#------  require CSS and JS files for this page (read info in base.css) ------}}
     {{ import random }}
     {{response.files.append(URL('static','css/base.css'))}}
@@ -47,7 +47,7 @@
     {{response.files.append(URL('static','js/superfish.js'))}}
     {{#------ include web2py specific js code (jquery, calendar, form stuff) ------}}
     {{include 'web2py_ajax.html'}}
-    
+
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -60,9 +60,10 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
 
-    </script>    
+    </script>
   </head>
   <body>
+    <a href="http://github.com/contatogilsonsbf/web2hash"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
     <div id="wrapper">
         <div id="header">
             <h1 id="logo"><span>Web2Hash - Hashes in the Twitter about web2py</span></h1>
@@ -73,10 +74,11 @@
         </div>
         <div id="footer">
             <address>
-                Developed by <a href="http://gilsondev.com">Gilson #DEV</a> | 
+                Developed by <a href="http://gilsondev.com">Gilson #DEV</a> |
                 <a href="https://github.com/contatogilsonsbf/web2hash">Fork in Github</a>
             </address>
         </div>
     </div>
   </body>
 </html>
+
